@@ -26,6 +26,7 @@ static inline void mono_memory_write_barrier (void)
 	__asm__ __volatile__ ("sfence" : : : "memory");
 }
 #elif defined(__i386__)
+#ifndef _MSC_VER
 static inline void mono_memory_barrier (void)
 {
 	__asm__ __volatile__ ("lock; addl $0,0(%%esp)" : : : "memory");
@@ -40,6 +41,24 @@ static inline void mono_memory_write_barrier (void)
 {
 	mono_memory_barrier ();
 }
+#else
+#include <intrin.h>
+
+static inline void mono_memory_barrier (void)
+{
+	_ReadWriteBarrier ();
+}
+
+static inline void mono_memory_read_barrier (void)
+{
+	_ReadBarrier ();
+}
+
+static inline void mono_memory_write_barrier (void)
+{
+	_WriteBarrier ();
+}
+#endif
 #elif defined(sparc) || defined(__sparc__)
 static inline void mono_memory_barrier (void)
 {
