@@ -1,3 +1,7 @@
+2007-08-14  Jonathan Chambers <joncham@gmail.com>
+
+	* libmono.vcproj: Enable intrinsic functions.
+
 2007-05-13  Raja R Harinath  <harinath@gmail.com>
 
 	* Makefile.am (VCPROJS): New.
